# novabistro

./: .gitignore  DOCUMENTO_PROYECTO_NOVABISTRO.md  MANUALES_USUARIO_NOVABISTRO.md  MANUAL_THUNDER_CLIENT.md  README.md  RESUMEN_PROYECTO.txt  main.py  pyproject.toml  reparar_pass.py
base_datos/: novabistro.sql  schema.sql
config/: conexionDB.py
documentacion/: DOCUMENTO_PROYECTO_NOVABISTRO.txt
front/: index.html  script.js  style.css
routes/: categorias.py  detalle_pedidos.py  mesas.py  pedidos.py  personal.py  productos.py  reportes.py  roles.py
