[project]
name = "novabistro"
version = "0.1.0"
description = "Sistema de gestion para restaurante NovaBistro"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.132.0",
    "psycopg>=3.3.3",
    "psycopg-binary>=3.3.3",
    "psycopg-pool>=3.3.0",
    "pydantic>=2.12.5",
    "uvicorn>=0.41.0",
]
