[project]
name = "novabistro"
version = "0.1.0"
description = "Sistema de gestion integral para restaurante NovaBistro"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "psycopg[binary]>=3.2.0",
    "psycopg-pool>=3.2.0",
    "bcrypt>=4.0.0",
    "pydantic>=2.0.0"
]

[tool.uv]
managed = true
